Merchant App setup

--- a/apps/merhcant-app/tsconfig.json
+++ b/apps/merhcant-app/tsconfig.json
@@ -5,7 +5,9 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "declaration": true,
+    "declarationMap": true,
   },
   "include": [
     "next-env.d.ts",
