--- a/apps/merhcant-app/package.json
+++ b/apps/merhcant-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs",
+  "name": "merhcant-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/shadcn": "*",
+    "@clerk/nextjs": "^5.2.6",
+    "@hookform/resolvers": "^3.9.0",
     "@repo/db": "*",
+    "@repo/shadcn": "*",
     "@repo/store": "*",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.5",
+    "react-hook-form": "^7.52.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0"
+    "eslint-config-next": "14.2.5"
   }
 }
