Migrated to Next-Auth from Clerk, Login and Signup working

--- a/apps/user-app/tsconfig.json
+++ b/apps/user-app/tsconfig.json
@@ -6,8 +6,8 @@
         "name": "next"
       }
     ],
-    "declaration": true,
-    "declarationMap": true,
+    "declaration": false,
+    "declarationMap": false,
   },
   "include": [
     "next-env.d.ts",
