--- a/apps/bank_webhook_handler/package.json
+++ b/apps/bank_webhook_handler/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bank_webhook_handler",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
@@ -8,5 +9,10 @@
     "@types/express": "^4.17.21",
     "esbuild": "^0.23.0",
     "express": "^4.19.2"
+  },
+  "scripts": {
+    "build": "npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
+    "start": "node dist/index.js",
+    "dev": "yarn run build && yarn run start"
   }
 }
