--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,8 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
+      - name: Generate Prisma Client
+        run: yarn db:generate
+
       - name: Run Build
         run: yarn build
